# bgs-modding-superpowers

./: .gitattributes  .gitignore  .mcp.json  .version-bump.json  CONTRIBUTING.md  README.md  RELEASE-NOTES.md  package.json
docs/: roadmap.md
plugins/bgs-modding-superpowers/tools/bgs-papyrus/: CHANGELOG.md  README.md  USER-GUIDE.en.md  pyproject.toml
plugins/bgs-modding-superpowers/tools/bgs-papyrus/bgs_papyrus/: cli.py  compile.py  decompile.py  detect.py  games.py  process.py
plugins/bgs-modding-superpowers/tools/mo2-mcp-sidecar/: README.md  pyproject.toml
tools/bgs-archive/: Cargo.toml  README.md
tools/bgs-archive/src/: archive.rs  cli.rs  cmd_caps.rs  cmd_extract.rs  cmd_info.rs  cmd_list.rs  error.rs  game.rs  lib.rs  main.rs  model.rs  safety.rs
tools/bgs-archive/tests/: cli_roundtrip.rs  cli_smoke.rs  fixtures.rs  real_archive.rs
tools/bgs-translator/: CHANGELOG.md  README.md  USER-GUIDE.zh-cn.md  pyproject.toml
tools/bgs-translator/bgs_translator/: __init__.py  __main__.py
tools/bgs-translator/bgs_translator/cli/: __init__.py  app.py  batch.py  config.py  edit.py  gui_launcher.py  inspect.py  profile.py  project.py  validate.py
tools/bgs-translator/bgs_translator/config/: __init__.py  migrations.py  paths.py  pricing.py  profiles.py  settings.py
tools/bgs-translator/bgs_translator/core/: client.py  event_queue.py  ipc.py  memory.py  project.py  runtime_pid.py  web_ipc_client.py
tools/bgs-translator/bgs_translator/gui/: __init__.py  app.py  close_handler.py  dpi.py  win_chrome.py
tools/bgs-translator/bgs_translator/kb/: __init__.py  glossary.py  models.py  reader.py  retriever.py  terminology_sources.py
tools/bgs-translator/bgs_translator/observability/: cost_tracker.py  rate_tracker.py
tools/bgs-translator/bgs_translator/parsers/: __init__.py  encoding.py  extractor.py  form_versions.py  strings_io.py  tes3.py  tes4_family.py
tools/bgs-translator/bgs_translator/pipeline/: __init__.py  batcher.py  extractor.py  item_payload.py  mask.py  prompt.py  retry.py  runner.py  signatures.py  validator.py
tools/bgs-translator/bgs_translator/sst/: __init__.py  envelope.py  hash.py  reader.py  status.py  writer.py
tools/bgs-translator/bgs_translator/tools/: __init__.py
tools/bgs-translator/bgs_translator/web/: __init__.py  app.py  events.py  security.py
tools/bgs-translator/scripts/: extract_cptranslate.py  restart-web-gui.ps1
tools/bgs-translator/tests/: conftest.py  test_adwryos_init_smoke.py  test_adwryos_smoke.py  test_amber_titlebar_drag_after_maximize.py  test_batch_plan_cli.py  test_batch_run_cli.py  test_batch_run_preview_integration.py  test_batcher.py  test_batches_tab.py  test_close_handler_two_stage.py  test_config_cli.py  test_cost_tracker.py  test_edit_cli.py  test_entries_tab.py  test_event_queue.py  test_extractor.py  test_form_versions.py  test_glossary_composer.py  test_glossary_retriever.py  test_glossary_tab.py  test_gui_imports.py  test_gui_polish.py  test_gui_smoke.py  test_i18n_coverage_wrap.py  test_inspect.py  test_ipc_server.py  test_kb_no_packs.py  test_kb_reader.py  test_keyboard_shortcuts.py  test_logs_tab_additions.py  test_memory.py  test_migrations.py  test_pipeline_extractor.py  test_profile_cli.py  test_profiles_dialogs.py  test_project_export_sst_status.py  test_project_init.py  test_prompt.py  test_prompt_tab.py  test_rate_tracker.py  (+17 more)
tools/bgs-translator/tests/cli/: test_gui_launcher.py
tools/bgs-translator/tests/gui/: __init__.py  test_app_prompt.py  test_entries_tab.py  test_glossary_tab.py  test_i18n_labels.py  test_profiles_tab.py  test_prompt_tab.py
tools/bgs-translator/tests/pipeline/: test_clients_openai_compat.py  test_runner_persistence.py
tools/bgs-translator/tests/web_e2e/: test_full_acceptance.py  test_parity_contracts.py  test_smoke.py
tools/mo2-assets-engine/: .gitignore  pyproject.toml
tools/mo2-assets-engine/src/mo2_assets_engine/: __init__.py  archive_ini.py  archive_order.py  conflict_resolver.py  mod_enumerator.py  profile.py  rationale.py  types.py  virtual_data_tree.py
tools/mo2-assets-engine/tests/: conftest.py  test_acceptance_harness.py  test_archive_ini.py  test_ba2.py  test_cli.py  test_mod_enumerator.py  test_profile.py  test_types.py  test_virtual_data_tree.py
tools/mo2-control-plane/plugin/: CMakeLists.txt  README.md
tools/mo2-control-plane/plugin/src/: CommandRegistry.h
(+1286 files in other folders)
