[package]
name = "bgs-archive"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Agent-native BA2/BSA unpack/pack CLI for Bethesda games"

[dependencies]
ba2 = "3.0.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
walkdir = "2"
globset = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
sha2 = "0.10"
