[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bgs-translator"
version = "0.1.0-dev"
description = "LLM-assisted Bethesda Game Studios plugin translation pipeline for xTranslator and ESP-ESM Translator."
authors = [{ name = "BB-84C" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "typer>=0.15",
  "pydantic>=2.10",
  "httpx>=0.27",
  "tomli-w>=1.0",
  "python-dotenv>=1.0",
  "openai>=1.50",
  "anthropic>=0.40",
  "google-genai>=0.5",
]

[project.scripts]
xtl = "bgs_translator.cli.app:main"
bgs-translator = "bgs_translator.cli.app:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "mypy>=1.13",
  "ruff>=0.8",
]
gui = []

[tool.setuptools.packages.find]
where = ["."]
include = ["bgs_translator*"]

[tool.setuptools.package-data]
"bgs_translator.gui.i18n" = ["*.po"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I", "UP", "B", "C4", "PERF", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
